# blender-on-android-apk

./: README.md  index.html
.github/workflows/: jekyll-gh-pages.yml
source/: .gitignore  gradle.properties  settings.gradle
source/app/: build.gradle
source/app/src/main/cpp/: CMakeLists.txt  blender_glue.cpp
source/app/src/main/cpp/creator/: creator.cc
source/app/src/main/cpp/creatorinclude/: BKE_anonymous_attribute_id.hh  BKE_attribute.hh  BKE_attribute_filters.hh  BKE_attribute_legacy_convert.hh  BKE_attribute_math.hh  BKE_attribute_storage_blend_write.hh  BKE_bake_data_block_map.hh  BKE_bake_geometry_nodes_modifier.hh  BKE_bake_geometry_nodes_modifier_pack.hh  BKE_bake_items.hh  BKE_bake_items_serialize.hh  BKE_bake_items_socket.hh  BKE_blender_undo.hh  BKE_blendfile.hh  BKE_compute_context_cache.hh  BKE_cryptomatte.hh  BKE_curve_to_mesh.hh  BKE_curves.hh  BKE_curves_utils.hh  BKE_customdata.hh  BKE_duplilist.hh  BKE_geometry_compare.hh  BKE_geometry_fields.hh  BKE_geometry_set.hh  BKE_geometry_set_instances.hh  BKE_grease_pencil_fills.hh  BKE_grease_pencil_vertex_groups.hh  BKE_id_hash.hh  BKE_image_format.hh  BKE_image_partial_update.hh  BKE_instances.hh  BKE_layer.hh  BKE_library.hh  BKE_mesh.hh  BKE_mesh_legacy_convert.hh  BKE_mesh_remap.hh  BKE_mesh_sample.hh  BKE_nla.hh  BKE_node.hh  BKE_node_runtime.hh  (+22 more)
source/app/src/main/cpp/jni/: blender_bridge.cpp  blender_bridge.h
source/app/src/main/java/com/example/mynative/alender/: MainActivity.java
source/app/src/main/res/values/: strings.xml
